<resources>
    <string name="app_name">AppStreaming</string>
    <string name="button">Button</string>
    <string name="sign_in">Sign in</string>
    <string name="title">Streaming App</string>
    <string name="welcome">welcome</string>
    <string name="footer">© 2022 Copyright: projetAndroid@gmail.com</string>
    <string name="footer_desktop">footer desktop</string>
    <string name="footer_chat">footer chat</string>
    <string name="footer_mobile">footer mobile</string>
    <string name="header_logo">header logo</string>
    <string name="loginmessage">Login to your account</string>
    <string name="username_email">Username/email</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="hintmail">mail</string>
    <string name="hintfirstname">fist name</string>
    <string name="hintlastname">last name</string>
    <string name="hintdatenaissance">11/07/2000</string>
    <string name="hintphone">934984398</string>
    <string name="hintpass">#@**#*#</string>
    <string name="Registration_last_name">last name</string>
    <string name="Registration_email">email</string>
    <string name="Registration_register">register</string>
    <string name="Registration_message">Create an account</string>
    <string name="Registration_first_name">first name</string>
    <string name="Registration_phone">Phone</string>
    <string name="Registration_date_naissance">Date naissance</string>
    <string name="_0_00">0:00</string>
    <string name="_3_55">3:55</string>
    <string name="buttonplay_pause">buttonplay/pause</string>
    <string name="movie">movie</string>
    <string name="movie_title">movie_title</string>
    <string name="all_movies">Last Movies</string>
    <string name="all_series">Last Series</string>
    <string name="full_screen_image">TODO</string>
    <string name="your_files">Your files</string>
    <string name="envoyer">Envoyer</string>
    <string name="fullscreenimagedesc">fullscreenimagedesc</string>
    <string name="comment">comment</string>

    <string name="online_content">Online content</string>
    <string name="user">user</string>
    <string name="user_infos">Current User</string>
    <string name="search_by">Search by</string>
    <string name="description">description</string>
    <string name="keyword">keyword</string>
    <string name="title_movie_name">title(movie name)</string>
    <string name="todomoviesearch">TODO</string>
</resources>