<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      style="@style/background"
                      xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackcarbon">
        <ImageView
                android:layout_width="80dp"
                android:layout_height="68dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView"
                android:layout_weight="1" android:contentDescription="@string/header_logo"/>
        <TextView
                android:text="@string/title"
                android:layout_width="wrap_content"
                android:layout_height="68dp" android:id="@+id/textView1" android:layout_weight="1"
                style="@style/text"/>
        <Button
                android:text="@string/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button1" android:layout_weight="1"
                style="@style/buttons" app:backgroundTint="@android:color/transparent"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="595dp">
        <TextView
                android:text="@string/welcome"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/desktop" android:id="@+id/imageView2"
                android:layout_weight="1" android:contentDescription="@string/footer_desktop"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/mess" android:id="@+id/imageView3"
                android:layout_weight="1" android:contentDescription="@string/footer_chat"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/mob" android:id="@+id/imageView4"
                android:layout_weight="1" android:contentDescription="@string/footer_mobile"/>
    </LinearLayout>
    <TextView
            android:text="@string/footer"
            android:layout_width="match_parent"
            android:layout_height="13dp" android:id="@+id/textView"/>
</LinearLayout>
