<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              style="@style/background"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              android:orientation="vertical"
>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackcarbon">
        <ImageView
                android:layout_width="80dp"
                android:layout_height="68dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView"
                android:layout_weight="1" android:contentDescription="@string/header_logo"/>
        <TextView
                android:text="@string/title"
                android:layout_width="wrap_content"
                android:layout_height="68dp" android:id="@+id/textView1" android:layout_weight="1"
                style="@style/text"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent" android:background="@color/white"
            android:layout_height="565dp" android:layout_marginTop="20dp">
        <TextView
                android:text="@string/loginmessage"
                android:layout_width="match_parent" style="@style/text.dark.center"
                android:layout_height="41dp" android:id="@+id/loginMessage"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="90dp">
            <TextView
                    android:text="@string/username_email"
                    android:layout_width="wrap_content" style="@style/text.dark"
                    android:layout_height="56dp" android:id="@+id/Username_email" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:inputType="textEmailAddress" style="@style/text.dark"
                    android:ems="10" android:hint="@string/hintmail"
                    android:id="@+id/Username_email_value" android:layout_weight="1" android:importantForAutofill="no"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="88dp">
            <TextView
                    android:text="@string/password"
                    android:layout_width="wrap_content" style="@style/text.dark"
                    android:layout_height="54dp" android:id="@+id/Password" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="88dp" style="@style/text.dark"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/Password_value" android:layout_weight="1" android:hint="@string/hintpass"
                    :importantForAutofill="no"
                    android:importantForAutofill="no"/>
        </LinearLayout>
        <Button
                android:text="@string/log_in"
                android:layout_width="wrap_content"
                android:layout_height="64dp" android:id="@+id/LoginButton" app:backgroundTint="#459A18"
                android:layout_marginLeft="100dp" android:layout_marginStart="100dp" android:onClick="validation"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@color/white">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="53dp">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/desktop"
                    android:id="@+id/imageView2"
                    android:layout_weight="1" android:contentDescription="@string/footer_desktop"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" app:srcCompat="@drawable/mess" android:id="@+id/imageView3"
                    android:layout_weight="1" android:contentDescription="@string/footer_chat"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/mob" android:id="@+id/imageView4"
                    android:layout_weight="1" android:contentDescription="@string/footer_mobile"/>
        </LinearLayout>
        <TextView
                android:text="@string/footer"
                android:layout_width="match_parent"
                android:layout_height="36dp" android:id="@+id/textView" style="@style/text.center.tiny.dark"/>
    </LinearLayout>
</LinearLayout>
