<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              style="@style/background"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              android:orientation="vertical">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackcarbon">
        <ImageView
                android:layout_width="80dp"
                android:layout_height="68dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView"
                android:layout_weight="1" android:contentDescription="@string/header_logo"/>
        <TextView
                android:text="@string/title"
                android:layout_width="wrap_content"
                android:layout_height="68dp" android:id="@+id/textView1" android:layout_weight="1"
                style="@style/text"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="565dp" android:layout_marginTop="20dp">
        <VideoView
                android:layout_width="match_parent"
                android:layout_height="375dp" android:id="@+id/videoView"/>
        <ImageButton
                android:layout_width="101dp"
                android:layout_height="62dp" app:srcCompat="@android:drawable/ic_media_play"
                android:id="@+id/imageButton" android:background="@color/black" android:layout_marginLeft="100dp"
                android:layout_marginStart="100dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@color/white">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="53dp">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/desktop"
                    android:id="@+id/imageView2"
                    android:layout_weight="1" android:contentDescription="@string/footer_desktop"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" app:srcCompat="@drawable/mess" android:id="@+id/imageView3"
                    android:layout_weight="1" android:contentDescription="@string/footer_chat"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/mob" android:id="@+id/imageView4"
                    android:layout_weight="1" android:contentDescription="@string/footer_mobile"/>
        </LinearLayout>
        <TextView
                android:text="@string/footer"
                android:layout_width="match_parent"
                android:layout_height="36dp" android:id="@+id/textView" style="@style/text.center.tiny.dark"/>
    </LinearLayout>
</LinearLayout>
