<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" style="@style/background"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:orientation="vertical"
>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blackcarbon" android:layout_weight="1">
        <ImageView
                android:layout_width="80dp"
                android:layout_height="68dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView"
                android:layout_weight="1" android:contentDescription="@string/header_logo"/>
        <TextView
                android:text="@string/title"
                android:layout_width="wrap_content"
                android:layout_height="68dp" android:id="@+id/textView1" android:layout_weight="1"
                style="@style/text"/>
        <LinearLayout
                android:orientation="vertical" android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:layout_weight="1" android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp">
            <TextView
                    android:text="@string/user_infos"
                    android:layout_width="match_parent" style="@style/text.verytiny"
                    android:layout_height="wrap_content" android:id="@+id/user_infos"/>
            <TextView
                    android:layout_width="match_parent" style="@style/text.verytiny"
                    android:layout_height="wrap_content" android:id="@+id/user"
                    android:text="@string/user" android:background="#80000000"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="05dp" android:layout_weight="6">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                    android:text="Serie Search"
                    android:layout_width="match_parent" style="@style/text.clear.big"
                    android:layout_height="wrap_content" android:id="@+id/textView4"
                    android:background="@color/blackcarbon"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/search_by" style="@style/text.clear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:background="#000000"
                />
                <RadioGroup
                        android:layout_width="match_parent" android:background="#CC000000"
                        android:layout_height="wrap_content">
                    <RadioButton
                            android:text="title(serie name)"
                            android:layout_width="match_parent" style="@style/text.clear"
                            android:layout_height="wrap_content" android:id="@+id/radioButtonT"/>
                    <RadioButton
                            android:text="@string/description"
                            android:layout_width="match_parent" style="@style/text.clear"
                            android:layout_height="wrap_content" android:id="@+id/radioButtonD"/>
                    <RadioButton
                            android:text="@string/keyword"
                            android:layout_width="match_parent" style="@style/text.clear"
                            android:layout_height="wrap_content" android:id="@+id/radioButtonK"/>
                </RadioGroup>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10" style="@style/text.dark.big"
                        android:background="#FFFFFF" android:hint="what to search ?" android:id="@+id/searchSerieText"/>
                <ImageButton
                        android:layout_width="60dp" app:backgroundTint="#409A0F"
                        android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_search"
                        android:onClick="searchSerie"
                        android:contentDescription="@string/todomoviesearch" android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp" android:layout_marginRight="30dp"
                        android:layout_marginEnd="30dp" android:id="@+id/searchSeriesB"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                    android:layout_width="match_parent" style="@style/text.clear.big"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    android:background="@color/blackcarbon"/>
            <GridView
                    android:layout_width="match_parent" android:numColumns="3"
                    android:layout_height="match_parent" android:id="@+id/seriesSearchView"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" android:layout_weight="1" android:layout_marginBottom="5dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="53dp" android:layout_weight="1">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/desktop"
                    android:id="@+id/imageView2"
                    android:layout_weight="1" android:contentDescription="@string/footer_desktop"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" app:srcCompat="@drawable/mess" android:id="@+id/imageView3"
                    android:layout_weight="1" android:contentDescription="@string/footer_chat"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/mob" android:id="@+id/imageView4"
                    android:layout_weight="1" android:contentDescription="@string/footer_mobile"/>
        </LinearLayout>
        <TextView
                android:text="@string/footer"
                android:layout_width="match_parent"
                android:layout_height="36dp" android:id="@+id/textView" style="@style/text.center.tiny.dark"
                android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
